# aidedchess

./: .gitignore  Albumentator.py  AnnotationConverter.py  Annotator.py  Board.py  ChessBoard.py  ChessPiece.py  CocoAlbumentator.py  DatasetSplitter.py  KeyManager.py  Perspective.py  PieceDetector.py  README.md  YoloAlbumentator.py  YoloConverter.py  _Board.py  aa.py  albument.py  analyze.py  app.py  board.py  chess.yaml  class-distribution.py  cv.mojo  generate-plot.py  main.py  move_val.py  optune.py  params.txt  pending-tasks.txt  perspective.py  pyproject.toml  requirements.txt  state_manager.py  tracks.py  train.py  utils.py
aided_chess/albumentation/: __init__.py  coco_albumentator.py  yolo_albumentator.py
aided_chess/annotation/: __init__.py  annotation_converter.py  annotator.py
aided_chess/converters/: __init__.py  image_converter.py  yolo_converter.py
aided_chess/managers/: __init__.py  key_manager.py  state_manager.py
aided_chess/models/: __init__.py  board.py  chess_board.py  chess_piece.py
aided_chess/tuning/: __init__.py  optune.py
aided_chess/utils/: __init__.py  analyze.py  class_distribution.py  dataset_splitter.py  integrity_checker.py  move_val.py  utils.py
data/: train-keypoints.json
