[project]
name = "aided-chess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations==1.4.4",
    "dill>=0.3.9",
    "opencv-contrib-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "ultralytics>=8.3.91",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
